Fix drawers visibility

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .hero-image {
-  background-image: url("/images/drawers.jpg");
+  background-image: url("./images/drawers.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
